--- a/CD-APIs.ipynb
+++ b/CD-APIs.ipynb
@@ -5,7 +5,7 @@
    "id": "08554184",
    "metadata": {},
    "source": [
-    "# Python e API\n",
+    "# Coleta de dados - API\n",
     "\n",
     "O que é API?<br>\n",
     "API é um conjunto de código para usar em um serviço/aplicativo, disponibilizado por aplicações de terceiros para promover integração de forma facilitada com seu código. Essas informações recbidas por APIs geralmente vem em formato JSON, que é uma espécio de dicionário que precisamos tratar para obter as informações desejadas.\n",
